Testing in resources

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 #quarkus.hibernate-orm.database.generation=update
 quarkus.log.category."org.optaplanner".level=DEBUG
 quarkus.optaplanner.solver.termination.spent-limit=3s
+quarkus.http.test-port=8083
+quarkus.http.test-timeout=10s
