--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,15 @@
       <artifactId>jackson-datatype-joda</artifactId>
       <version>2.11.4</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20201115</version>
+    </dependency>
 
   </dependencies>
   <build>
