--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=
 quarkus.datasource.password=
-quarkus.datasource.jdbc.url=jdbc:h2:mem:school-timetabling
+quarkus.datasource.jdbc.url=jdbc:h2:mem:scheduling-surgeries
 quarkus.hibernate-orm.database.generation=drop-and-create
 #quarkus.hibernate-orm.database.generation=update
 quarkus.log.category."org.optaplanner".level=DEBUG
-quarkus.optaplanner.solver.termination.spent-limit=3s
+quarkus.optaplanner.solver.termination.spent-limit=90s
 quarkus.http.test-port=8083
 quarkus.http.test-timeout=10s
